2017-04-11  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py: Add least_siginficant_digit hint, fix
	calendar coding

	* typhon/datasets/dataset.py: Reading period of xarray now works!

	* typhon/datasets/tovs.py: Some bugfixes

	* typhon/physics/units/em.py: Bugfixes

	* typhon/physics/units/tools.py: Bugfixes
	
2017-04-07  Richard Larsson  <ric.larsson@gmail.com>

	* typhon/arts/catalogues.py:  Fixed an error I introduced in last
	entry.  Also added a partition_functions class to compute 
	partition sums the same way as in ARTS using the cross_section method
	of ARTSCAT5.  Can be initialized directly from SpeciesAuxData 
	(load arts-xml-data tips.xml).  Fun pass time: load some
	ARTSCAT5 lines from arts-xml-data (the Perrin-folder),
	also load the tips.xml file, and then run the cross-section
	calculations for a few temperatures, plotting the results, 
	to clearly see the distribution of line strengths shift from
	low to high frequencies as temperature increases

2017-04-07  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/plots.py:

	* (profile_p, profile_p_log, profile_z):

	Added functions for basic atomspheric profile plots.

	* (fmt_hectopascal):

	Formatter to create pretty hectopascal labels for profile plots.

	* doc/typhon.plots.rst: Added new functions to documentation.

2017-04-06  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset._add_gran_to_data):

	- Further preparation for supporting xarray

	* typhon/datasets/tovs.py(HIRS.filter_firstline):

	- Did I just fix or introduce an off-by-one-bug?  Either way, this
	method is ultimately on its way out in favour of filter_bestline still
	to be implemented, so I will accept the risk of a off-by-minus-one bug
	for now.  But I seemed to be getting one duplicate line between
	adjecent granules.  I don't understand why.  Perhaps related to the
	work I've done on Dataset._add_gran_to_data and friends.
