@@ -1,3 +1,11 @@
+2017-04-12  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/utils/__init__.py (print_timing):
+
+	Removed decorator `print_timing`.
+
+	`Timer` objects can be used as function decorators instead.
+
 2017-04-11  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/datasets/_tovs_defs.py: Add least_siginficant_digit hint, fix
